--- a/index.html
+++ b/index.html
@@ -72,43 +72,45 @@
   </header>
 
   <!-- Libros -->
-  <section class="bg-light page-section" id="libros">
+  <section class="page-section bg-light page-section" id="libros">
       <div class="container">
-          <div class="row justify-content-center">
+          <div class="row d-flex justify-content-center">
               <div class="col-lg-12 text-center ">
                 <h2 class="section-heading text-uppercase">Libros</h2> 
               </div>
               <input style="width: 50%" type="text" autocomplete="off" class="form-control" id="NameBook" placeholder="Nombre del Libro">
-            </div>
 
-            <div class="row py-2 text-center">
-              <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                  <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                  <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">E-Commerce</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-              </div>
-
-              <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                  <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                  <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">Responsive Design</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-              </div>
-
-              <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                  <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                  <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">Web Security</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+              <div id="form" class="row py-4 col-lg-12 d-flex justify-content-center">
+                <div class="form-row">
+                  <div class="form-group col-4">
+                     <img class="view overlay z-depth-1-half " id="imglibro"  src="img/principito.jpg" height="100%" width="100%">
+                  </div> 
+                    <div class="form-group col-4">
+                      <label for="inputAddress">Titulo</label>
+                      <input type="text" autocomplete="off" class="form-control" id="titulo" placeholder="El pricipito">
+                      <label for="inputAddress">Autor</label>
+                      <input type="text" autocomplete="off" class="form-control" id="autor" placeholder="Antoine de Saint-Exupéry">
+                      <label for="inputAddress">Editorial</label>
+                      <input type="text" autocomplete="off" class="form-control" id="editorial" placeholder=" Publicaciones y Ediciones Salamandra, S.A.">
+                    </div> 
+         <!--iNPUT cantidad y precio-->
+         <div class="py-2 d-flex justify-content-center form-group col-4">
+          <div>
+              <div class="input-group py-4">
+                <div class="input-group-prepend">
+                  <div class="input-group-text bg-warning"><i class='far fa-money-bill-alt'></i></div>
+                </div>
+              <input type="text" autocomplete="off" class="form-control " id="price" placeholder="Precio">
               </div>
             </div>
+          </div>
+
+            </div>
+      </div>
+        
+             
+          </div>
+
           </div>
       </div>
     </section>  
@@ -182,6 +184,14 @@
                   </div>
                 </div>
               </div> 
+
+              <!--Imagen-->
+              <div class="form-row py-2 d-flex justify-content-center">
+                <div class="input-group-prepend file-path-wrapper">
+                  <div class="input-group-text bg-light"><i class='fas fa-cloud-upload-alt' aria-hidden="true"></i></div>
+                  <input type='file' value="Subir portada" class="file-path validate" id="upload" accept="image/*">
+                 </div>   
+              </div>
         </div>
 
         <!--botones-->
