--- a/Login.html
+++ b/Login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
   <meta charset="utf-8">
@@ -22,16 +21,39 @@
 
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
-  
+
+   <style type="text/css">
+      body {  
+              background-image: url("img/header-bg.jpg")                
+       }
+      </style>
 
 </head>
+
 <body id="page-top">
     <header class="masthead">
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-                    <div class="container">
-                      <a class="navbar-brand js-scroll-trigger" href="#page-top">El jodido</a>
-                    </div>
-                  </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+            <div class="container">
+              <a class="navbar-brand js-scroll-trigger" href="#page-top">El Jodido</a>
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="#libros">Libros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">Registrarse</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
       </header>
       <br>
       <br>
@@ -42,9 +64,10 @@
       <div class="d-flex justify-content-center">
       <div class="wrap-login100">
          <form id="frm" class="login100-form validate-form" class="center">
-            
+           <input id="imagen" name="imagen" type="image"src="img/research_books_22128.png">
                 <i class="zmdi zmdi-landscape"></i>
-
+                <br>
+<a  class="navbar-brand js-scroll-trigger">El jodido</a>
             <span class="login100-form-title p-b-34 p-t-27">
                 Log in
             </span>
