--- a/login_registro.html
+++ b/login_registro.html
@@ -23,15 +23,40 @@
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
   
+  <link href="css/agency.min.css" rel="stylesheet">
+
+   <style type="text/css">
+      body {  
+              background-image: url("img/header-bg.jpg")                
+       }
+      </style>
 
 </head>
-<body id="page-top" background="/img/header-bg.jpg" >
+<body id="page-top" >
     <header class="masthead">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-                <div class="container">
-                  <a class="navbar-brand js-scroll-trigger" href="#page-top">El jodido</a>
+            <div class="container">
+              <a class="navbar-brand js-scroll-trigger" href="#page-top">El Jodido</a>
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="#libros">Libros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" href="#contact">
+                        <i class='fas fa-user'></i>Login</a>
+                    </li>
+                  </ul>
                 </div>
-              </nav>
+              </div>
+            </nav>
   </header>
   <br>
   <br>
