Mejar y mmodificacion del login y registro

--- a/login_registro.html
+++ b/login_registro.html
@@ -72,29 +72,51 @@
            Registrate
        </span>
        <div class="wrap-input100 validate-input" data-validate = "Nombre">
-           <input class="input100" type="text" name="name" placeholder="Name">
-           <span class="focus-input100" data-placeholder="&#xf207;"></span>
+          <div class="input-group form-group">
+              <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+              <input type="name" class="form-control" placeholder="Nombre">
+            </div>
        </div>
+       </div>
+
        <br>
        <div class="wrap-input100 validate-input" data-validate="Apellidos">
-           <input class="input100" type="text" name="ape" placeholder="Apellidos">
-           <span class="focus-input100" data-placeholder="&#xf191;"></span>
+          <div class="input-group form-group">
+              <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+              <input type="apellidos" class="form-control" placeholder="Apellidos">
+            </div>
+          </div>
        </div>
        <br>
+       
        <div class="wrap-input100 validate-input" data-validate="Correo electrónico">
-           <input class="input100" type="text" name="correo" placeholder="Correo">
-           <span class="focus-input100" data-placeholder="&#xf207;"></span>
+          <div class="input-group form-group">
+              <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+              <input type="correo" class="form-control" placeholder="Correo">
+            </div>
+       </div>
        </div>
        <br>
        <div class="wrap-input100 validate-input" data-validate="Password">
-           <input class="input100" type="password" name="pass" placeholder="Password">
-           <span class="focus-input100" data-placeholder="&#xf191;"></span>
+          <div class="input-group form-group">
+              <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+              <input type="password" class="form-control" placeholder="Password">
+            </div>
+       </div>
        </div>
        <br>
        <div class="wrap-input100 validate-input" data-validate="Validarpassword">
-            <input class="input100" type="password" name="passv" placeholder="Validar Password">
-            <span class="focus-input100" data-placeholder="&#xf191;"></span>
+          <div class="input-group form-group">
+              <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+              <input type="valipassword" class="form-control" placeholder="Validarpassword">
+            </div>
         </div>
+       </div>
         <br>
        <div class="container-login100-form-btn">
            <button class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">
