--- a/Login.html
+++ b/Login.html
@@ -63,7 +63,8 @@
 
       <div class="d-flex justify-content-center">
       <div class="wrap-login100">
-         <form id="frm" class="login100-form validate-form" class="center">
+          <div class="card-body">
+         <form class="login100-form validate-form" class="center">
            <input id="imagen" name="imagen" type="image"src="img/research_books_22128.png">
                 <i class="zmdi zmdi-landscape"></i>
                 <br>
@@ -71,14 +72,24 @@
             <span class="login100-form-title p-b-34 p-t-27">
                 Log in
             </span>
-            <div class="wrap-input100 validate-input" data-validate = "Enter username">
-                <input class="input100" type="text" name="username" placeholder="Username">
-                <span class="focus-input100" data-placeholder="&#xf207;"></span>
-            </div>
+           <div class="wrap-input100 validate-input" data-validate = "Enter username">
+
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user"></i></span>
+                </div>
+                <input type="text" class="form-control" placeholder="Usuario"> 
+              </div>
+           </div>
+
             <br>
             <div class="wrap-input100 validate-input" data-validate="Enter password">
-                <input class="input100" type="password" name="pass" placeholder="Password">
-                <span class="focus-input100" data-placeholder="&#xf191;"></span>
+                <div class="input-group form-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="fas fa-key"></i></span>
+                    </div>
+                    <input type="password" class="form-control" placeholder="Password">
+                  </div>
             </div>
             <br>
             <div class="container-login100-form-btn">
@@ -87,6 +98,7 @@
                 </button>
             </div>
         </form> 
+          </div>
       </div>
     </div>
 
@@ -128,7 +140,6 @@
           </div>
         </div>
       </footer>
-            <script src="js/main.js"></script>
             
 </body>
 </html>
