Se agrego un combobox al formulario de registro

--- a/login_registro.html
+++ b/login_registro.html
@@ -100,6 +100,20 @@
        </div>
        </div>
        <br>
+       <div class="wrap-input100 validate-input">
+       <label for="inputAddress">Tipo de usuario:</label>
+       <div class="container">
+        <div class="row">
+          <div class="col-sm-3">
+            <select class="form-control">
+              <option >Administrador</option>
+              <option >Cliente</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div> 
+        <br>
        <div class="wrap-input100 validate-input" data-validate="Password">
           <div class="input-group form-group">
               <div class="input-group-prepend">
