--- a/login_registro.html
+++ b/login_registro.html
@@ -75,7 +75,7 @@
           <div class="input-group form-group">
               <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-user"></i></span>
-              <input type="name" class="form-control" placeholder="Nombre">
+              <input id="name" type="name" class="form-control" placeholder="Nombre">
             </div>
        </div>
        </div>
@@ -85,7 +85,7 @@
           <div class="input-group form-group">
               <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-user"></i></span>
-              <input type="apellidos" class="form-control" placeholder="Apellidos">
+              <input id="apellidos" type="apellidos" class="form-control" placeholder="Apellidos">
             </div>
           </div>
        </div>
@@ -95,7 +95,7 @@
           <div class="input-group form-group">
               <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-user"></i></span>
-              <input type="correo" class="form-control" placeholder="Correo">
+              <input id="correo" type="correo" class="form-control" placeholder="Correo">
             </div>
        </div>
        </div>
@@ -105,7 +105,7 @@
        <div class="container">
         <div class="row">
           <div class="col-sm-3">
-            <select class="form-control">
+            <select id="combo" class="form-control">
               <option >Administrador</option>
               <option >Cliente</option>
             </select>
@@ -118,7 +118,7 @@
           <div class="input-group form-group">
               <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-key"></i></span>
-              <input type="password" class="form-control" placeholder="Password">
+              <input id="pass" type="password" class="form-control" placeholder="Password">
             </div>
        </div>
        </div>
@@ -127,13 +127,13 @@
           <div class="input-group form-group">
               <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-key"></i></span>
-              <input type="valipassword" class="form-control" placeholder="Validarpassword">
+              <input id="validar_pass" type="password" class="form-control" placeholder="Validarpassword">
             </div>
         </div>
        </div>
         <br>
        <div class="container-login100-form-btn">
-           <button class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">
+           <button id="btn_registro" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">
                Registrarse
            </button>
        </div>
