Registro de usuarios y arreglos

--- a/login.html
+++ b/login.html
@@ -74,9 +74,8 @@
      </div>
        
        <div class="container">
-          <button id="btn_login" class="btn btn-warning text-uppercase">
-              Login
-          </button>
+        <input id="btn_login" class="btn btn-warning text-uppercase" type="button" value="Login">
+        <input id="btn_registro" class="btn btn-warning text-uppercase" type="button" value="Registro">
        </div>
    </form> 
  </div>
