--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -93,11 +92,11 @@
                   </div> 
                     <div class="form-group d-flex flex-column col-5">
                       <label for="inputAddress">Titulo</label>
-                      <input type="text" autocomplete="off" class="form-control" id="titulo" placeholder="El pricipito" >
+                      <input type="text" autocomplete="off" class="form-control" id="titulo" placeholder="El pricipito" readonly>
                       <label class="py-2" for="inputAddress">Autor</label>
-                      <input type="text" autocomplete="off" class="form-control" id="autor" placeholder="Antoine de Saint-Exupéry" >
+                      <input type="text" autocomplete="off" class="form-control" id="autor" placeholder="Antoine de Saint-Exupéry" readonly>
                       <label class="py-2" for="inputAddress">Editorial</label>
-                      <input type="text" autocomplete="off" class="form-control" id="editorial" placeholder=" Publicaciones y Ediciones Salamandra" >
+                      <input type="text" autocomplete="off" class="form-control" id="editorial" placeholder=" Publicaciones y Ediciones Salamandra" readonly>
                     </div> 
 
                     <div class="form-group d-flex flex-column col-3">
@@ -105,13 +104,13 @@
                         <div class="input-group-prepend">
                           <div class="input-group-text bg-warning"><i class='far fa-money-bill-alt'></i></div>
                         </div>
-                      <input type="text" autocomplete="off" class="form-control " id="price" placeholder="Precio" >
+                      <input type="text" autocomplete="off" class="form-control " id="price" placeholder="Precio" readonly>
 
                       <div class="input-group py-4">
                         <div class="input-group-prepend">
                           <div class="input-group-text bg-warning"><i class='fas fa-book-open'></i></div>
                         </div>
-                      <input type="text" autocomplete="off" class="form-control " id="cant" placeholder="Cantidad" >
+                      <input type="text" autocomplete="off" class="form-control " id="cant" placeholder="Cantidad" readonly>
                       </div>
                     </div> 
             </div>
@@ -214,8 +213,8 @@
       <table id="tabla" class="table table-striped table-dark">
           <thead class="thead-dark">
               <tr>
-                  <th>ID</th>
-                  <th>Nombre</th>
+                  <th>Código</th>
+                  <th>Titulo</th>
                   <th>Autor</th>
                   <th>Editorial</th>
                   <th>Cantidad</th>
@@ -223,6 +222,28 @@
                   <th>Editar</th>
               </tr>
           </thead>
+          <tbody>
+          <?php
+          $conn = mysqli_connect('mysql', 'root', 'root', 'libreria') or die("Connection failed: " . mysqli_connect_error());
+          $sql="select * from libro";
+          $query=mysqli_query($conn,$sql);
+          
+          while ($row = mysqli_fetch_assoc($query)){ 
+            ?>
+          <tr>
+          <td> <?php echo $row['id_libro'] ?> </td>
+          <td> <?php echo $row['titulo'] ?> </td>
+          <td> <?php echo $row['autor'] ?> </td>
+          <td> <?php echo $row['editorial'] ?> </td>
+          <td> <?php echo $row['precio'] ?> </td>
+          <td> <?php echo $row['cantidad'] ?> </td>
+          <td ><i class="fas fa-edit btnedit" data-id="<?php echo $row['id_libro']; ?>"></i></td>
+          </tr>
+          <?php
+            }
+            mysqli_close($conn);
+          ?>
+        </tbody>
           </table>
         </div>
   </section>
